--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.4.1
 annotated-types==0.7.0
 attrs==24.2.0
+babel==2.16.0
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
@@ -9,21 +10,35 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.2.0
+ghp-import==2.1.0
 gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.1.0
+griffe==1.3.0
 idna==3.8
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-autorefs==1.2.0
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.34
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.26.1
+mkdocstrings-python==1.11.1
 narwhals==1.6.4
 numpy==2.1.1
 packaging==24.1
+paginate==0.5.7
 pandas==2.2.2
+pathspec==0.12.1
 pillow==10.4.0
+platformdirs==4.3.2
 protobuf==5.28.0
 psycopg2-binary==2.9.9
 pyarrow==17.0.0
@@ -31,10 +46,14 @@ pydantic==2.9.1
 pydantic_core==2.23.3
 pydeck==0.9.1
 Pygments==2.18.0
+pymdown-extensions==10.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.2
+pyyaml_env_tag==0.1
 referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
 rich==13.8.1
 rpds-py==0.20.0
